--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# requirements.txt
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
@@ -11,19 +12,4 @@ Jinja2==3.1.2
 joblib==1.3.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
-matplotlib==3.8.2
-mlxtend==0.23.0
-numpy==1.26.2
-openpyxl==3.1.2
-packaging==23.2
-pandas==2.1.4
-Pillow==10.1.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-scikit-learn==1.3.2
-scipy==1.11.4
-six==1.16.0
-threadpoolctl==3.2.0
-tzdata==2023.3
-Werkzeug==3.0.1
+matplotlib==3.5.4
