--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
-  command = "python app.py"
+  command = "pip install -r requirements.txt && python app.py"
   functions = "functions"
+  publish = "/opt/build/repo"
+
 
 [[redirects]]
   from = "/*"
