--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# requirements.txt
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
@@ -13,3 +12,4 @@ joblib==1.3.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.4.3
+pandas>=1.3.3
