--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "pip install -r requirements.txt && python app.py &"
-  functions = "functions"
-  publish = "/opt/build/repo"
+  publish = "/"
+
 
 
 [[redirects]]
