--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pip install -r requirements.txt && python app.py &"
+  command = "pip install -r requirements.txt && gunicorn -b 0.0.0.0:5000 app:app"
   publish = "/"
 
 
