--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pip install -r requirements.txt && gunicorn -b 0.0.0.0:5000 app:app"
+  command = "pip install -r requirements.txt && gunicorn -b 0.0.0.0:5000 app:app --timeout 60"
   publish = "/"
 
 
